# SEwork

./: .gitignore  README.md
client/: Main.java  build_client.bat  package_client.bat  run_main.bat  run_test_client.bat  sources.txt
client/net/: TcpClient.java
client/src/: Main.java  TestClient.java
client/src/model/: AuthSession.java  MaterialDto.java  OrderDetailDto.java  OrderItemDto.java  OrderSummaryDto.java  StockDto.java  SupplierDto.java  UserDto.java
client/src/net/: TcpClient.java
client/src/protocol/: ApiClient.java  ApiException.java  ClientRequest.java  ClientResponse.java  JsonUtil.java
client/src/service/: AuthClientService.java  InventoryClientService.java  MaterialClientService.java  OrderClientService.java  SupplierClientService.java  UserClientService.java
client/src/ui/: InventoryPanel.java  LoginFrame.java  MainFrame.java  MaterialPanel.java  OrderPanel.java  ReceivePanel.java  RefreshablePanel.java  SupplierPanel.java  UserPanel.java
server/: CMakeLists.txt
server/include/domain/: InventoryRecord.h  Material.h  PurchaseOrder.h  Supplier.h  User.h
server/include/net/: TcpServer.h
server/include/persistence/: Datastorage.h
server/include/protocol/: Request.h  RequestDispatcher.h  Response.h
server/include/repository/: InventoryRepository.h  MaterialRepository.h  OrderRepository.h  SupplierRepository.h  UserRepository.h
server/include/service/: AuthService.h  InventoryService.h  MaterialService.h  OrderService.h  SupplierService.h  UserService.h
server/src/: main.cpp
server/src/net/: TcpServer.cpp
server/src/persistence/: Datastorage.cpp
server/src/protocol/: RequestDispatcher.cpp
server/src/repository/: InventoryRepository.cpp  MaterialRepository.cpp  OrderRepository.cpp  SupplierRepository.cpp  UserRepository.cpp
server/src/service/: AuthService.cpp  InventoryService.cpp  MaterialService.cpp  OrderService.cpp  SupplierService.cpp  UserService.cpp
server/tests/: ServiceTest.cpp
